# layered-terrain

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.c  imgui.ini  layeredterrain.sln  layeredterrain.vcxproj  layeredterrain.vcxproj.filters  main.cpp  shader.vcxproj  shader.vcxproj.filters  stb_image.vcxproj  stb_image.vcxproj.filters  texture.vcxproj  texture.vcxproj.filters
Libraries/include/: gif.h
Libraries/include/glad/: glad.h
graphics/: shader.cpp  shader.h  texture.cpp  texture.h
resources/shaders/: 2dheightmapvis.frag  2dheightmapvis.vert  calcWaterOutHeightmap.comp  erodeHeightmap.comp  erosionMapRaymarcher.frag  fullscreenTri.vert  heightmaperosioncommon.glsl  initializeHeightmap.comp  random.glsl
